# a2a_dynamic_discovery_sample

./: .firebaserc  .gitignore  README.md  firebase.json  frontend_app.py  pyproject.toml  requierements.txt  requirements.txt  run_agents.py  startup.sh  test_e2e.py
.firebase/: hosting.cHVibGlj.cache
.github/workflows/: deploy.yml
.kiro/steering/: development.md  product.md  structure.md  tech.md
airline_agent/: agent.json  agent.py
frontend/: index.html  main.js  style.css
personal_assistant/: agent.json  agent.py
rendezvous-agent/: README.md  wrangler.toml
rendezvous-agent/src/: worker.js
tools/: discovery_tools.py
travel_agent/: agent.json  agent.py
